Set width on various page components to prevent viewport overflow

--- a/packages/frontend/src/pages/Login/index.module.css
+++ b/packages/frontend/src/pages/Login/index.module.css
@@ -2,4 +2,5 @@
     display: flex;
 
     min-height: calc(var(--vh, 1vh) * 100);
+    max-width: min(calc(var(--vw) * 100), 100%);
 }
