--- a/packages/frontend/src/pages/TermsAndConditions/index.module.css
+++ b/packages/frontend/src/pages/TermsAndConditions/index.module.css
@@ -6,6 +6,7 @@
     background: var(--background-primary, white);
 
     width: 100%;
+    max-width: min(calc(var(--vw) * 100), 100%);
     min-height: calc(var(--vh, 1vh) * 100);
     height: min-content;
     padding: 16px;
